--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nodejs-app",
   "version": "1.0.0",
   "description": "A minimal Node.js web application.",
+  "engines": {
+    "node": "18"
+  },
   "main": "app.js",
   "author": "alphasec",
   "license": "MIT",
